gcc/testsuite/g++.dg/parse/typename1.C
template <class baz>
struct bar
{
  typedef typename baz::typename rebind<int> foo; // { dg-error "" }
};
